@@ -1,3 +1,10 @@
+2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* lily/ttf.cc (print_trailer): don't always use uXXX glyphname.
+
+	* scripts/lilypond-book.py (Module): set default for linewidth if
+	preamble not found.
+
 2006-03-29  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* VERSION (PACKAGE_NAME): release 2.9.0.
